--- a/src/pages/ProjectPages.css
+++ b/src/pages/ProjectPages.css
@@ -6,7 +6,7 @@
     justify-content: flex-start;
     height: 100vh;
     width: 100vw;
-    padding: 20px;
+    padding: 0 20px 20px 20px;
     box-sizing: border-box;
     overflow: hidden;
     background: transparent;
@@ -21,7 +21,6 @@
     color: #00F3FF;
     text-shadow: 0 0 10px rgba(0, 243, 255, 0.7), 0 0 20px rgba(0, 243, 255, 0.5);
     margin-bottom: 10px;
-    margin-top: 60px;
 }
 
 /* Search Bar & Add Button */
